<resources>
    <string name="app_name">StudentKC</string>

    <!-- main activity -->
    <string name="sign_out">выйти</string>

    <!-- activity test resolving -->
    <string name="surrender_button">сдаться</string>
    <string name="next_question_button">далее</string>

    <!-- fragment choose usertype -->
    <string name="text_ontop">самый могучий в рот всех ебучий</string>
    <string name="button_login">Войти</string>
    <string name="edit_login_email">Адрес эл.почты</string>
    <string name="edit_login_pass">Пароль</string>
    <string name="login_toast">Вы авторизованы</string>

    <!-- fragment teacher main-->
    <string name="text_user_label">Вы вошли как преподаватель</string>
    <string name="button_create_test">Создать тест</string>
    <string name="button_create_room">Создать комнату</string>
    <string name="button_edit_test">Редактировать тест</string>
    <string name="button_edit_room">Редактировать комнату</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- fragment student main-->
    <string name="text_student_label">Вы вошли как жмых</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="drop_test_button">SURRENDER</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>