<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <TextView
            android:id="@+id/user_label"
            android:text="@string/text_user_label"
            android:layout_marginTop="14dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="230dp"
            android:layout_height="20dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">


        <Button
            android:id="@+id/button_create_room"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:text="@string/button_create_room"
            />

        <Button
            android:id="@+id/button_edit_room"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:text="@string/button_edit_room"
            />

        <Button
            android:id="@+id/button_create_test"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:text="@string/button_create_test"
            />

        <Button
            android:id="@+id/button_edit_test"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:text="@string/button_edit_test"
            />


        </LinearLayout>


</FrameLayout>