<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.unidubna.studentkc.FullscreenActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@color/white">

        <EditText
            android:id="@+id/edit_login_mail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/edit_login_email"/>

        <EditText
            android:id="@+id/edit_login_pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/edit_login_pass"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/button_login"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="#03A9F4"
            android:textColor="@color/white"
            android:text="@string/button_login"
            />

        <Button
            android:id="@+id/button_student_login"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="#03A9F4"
            android:textColor="@color/white"
            android:text="BE LOOSER"
            />


    </LinearLayout>


</FrameLayout>